syntax = "proto3";

package com.github.ptracker.entity;

option java_package = "com.github.ptracker.entity";
option java_multiple_files = true;
option java_outer_classname = "GardenProto";

message Garden {

  string id = 1;

  string name = 2;

  string space_id = 3;
}
